[gd_scene load_steps=3 format=3 uid="uid://vjlox1ap5cbw"]

[ext_resource type="Script" path="res://scripts/LevelUpMenu.gd" id="1_gvi80"]
[ext_resource type="PackedScene" uid="uid://cqpeq5wt6e240" path="res://prefabs/StatIncreaseRow.tscn" id="1_jh7jt"]

[node name="LevelUpMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvi80")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -161.0
offset_right = 159.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 7.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Level Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatPoints" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 44.0
offset_bottom = 75.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][i]Available Points: 0[i][center]"

[node name="ConfirmButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.5
offset_top = -42.0
offset_right = 35.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -60.0
offset_right = -9.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="Attack" parent="Panel/VBoxContainer" instance=ExtResource("1_jh7jt")]
layout_mode = 2
stat_name_value = "Attack"

[node name="Defense" parent="Panel/VBoxContainer" instance=ExtResource("1_jh7jt")]
layout_mode = 2
stat_name_value = "Defense"

[node name="MaxHP" parent="Panel/VBoxContainer" instance=ExtResource("1_jh7jt")]
layout_mode = 2
stat_name_value = "Max HP"

[node name="Speed" parent="Panel/VBoxContainer" instance=ExtResource("1_jh7jt")]
layout_mode = 2
stat_name_value = "Speed"
